--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,47 +7,79 @@
   <div class="container">
     <% if @featured %>
       <div class="featured-post">
-        <a href="/">
           <h1>Featured</h1>
-          <div class="featured-post-div">
-            <div class="featured-post-div-text">
-              <h2><%= @featured.title %></h2>
-              <p class="black"><%= @featured.text.truncate(120) %></p>
+          <%= link_to post_path(@featured) do %>
+            <div class="featured-post-div">
+              <div class="featured-post-div-text">
+                <h2><%= @featured.title %></h2>
+                <div class="responsive-text">
+                  <%= raw @featured.text.truncate(120) %>
+                </div>
+                </div>
+              </div>
+              <% if @featured.image.present? %>
+                  <%= cl_image_tag @featured.image, class: 'featured-post-image' %>
+                <% else %>
+                  <%= image_tag 'https://images.pexels.com/photos/6335/man-coffee-cup-pen.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260', class: 'featured-post-image' %>
+                <% end %>
+              <%# link_to post_path(@featured), class: "rel-link" %>
             </div>
-            <%= cl_image_tag @featured.image, class: "featured-post-image" %>
-            <% link_to post_path(@featured), class: "rel-link" %>
-          </div>
-        </a>
+          <% end %>
       </div>
     <% end %>
     <div class="all-news">
       <h1><%= t("news.news") %></h1>
-      <div class="news-grid">
+      <div class="row">
         <% @posts.last(6).each do |post| %>
-            <div class="post-card">
-              <%= link_to post_path(post) do %>
-              <div class="post-card-text">
-                <h6><%= post.title %></h6>
-                <p><%= raw post.text.truncate(100) %></p>
-                <div class="post-card-text-details">
-                  <p class="font-12"><%= post.created_at.strftime("%b %y") %></p>
-                  <pre class="m-0" style="padding-top: 2px;"> • </pre>
-                  <p class="font-12"><%= post.reading_time %> min read</p>
+          <div class="col-12 col-lg-6">
+            <%= link_to post_path(post), class: 'no-decoration' do %>
+              <div class="new-post-card">
+                <div class="new-post-card-content">
+                  <h6><%= post.title.truncate(65) %></h6>
+                  <div class="new-post-card-text"><%= raw post.text.truncate(100) %></p></div></div>
+                  <div class="post-card-text-details">
+                    <p class="font-12 grey-text lighter"><%= post.created_at.strftime("%b %y") %></p>
+                    <pre class="m-0 grey-text lighter" style="padding-top: 2px;"> • </pre>
+                    <p class="font-12 grey-text lighter"><%= post.reading_time %> min read</p>
+                  </div>
                 </div>
-              </div>
-                <%= cl_image_tag post.image %>
-              <% end %>
-              <div class="d-flex">
-                <% if policy(Post).create? %>
-                  <%= link_to "Edit", edit_admin_post_path(post), class: 'crud-links' %>
-                  <%= link_to "Delete", admin_post_path(post), method: :delete, data: { confirm: "Are you sure you want to delete the post '#{ post.title }'" }, class: 'crud-links' %>
+                <% if post.image.present? %>
+                  <%= cl_image_tag post.image, class: 'new-post-card-image' %>
+                <% else %>
+                  <%= image_tag 'https://images.pexels.com/photos/6335/man-coffee-cup-pen.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260', class: 'new-post-card-image' %>
                 <% end %>
               </div>
-            </div>
+            <% end %>
+          </div>
         <% end %>
       </div>
-      <div class="news-grid-button">
-       <!--  <span class="yellow-button">More News</span> -->
-      </div>
+      <!-- <div class="news-grid">
+        <%# @posts.last(6).each do |post| %>
+            <div class="post-card">
+                <%#= link_to post_path(post) do %>
+                    <div class="post-card-text">
+                        <h6><%#= post.title %></h6>
+                        <p><%#= raw post.text.truncate(100) %></p>
+                        <div class="post-card-text-details">
+                          <p class="font-12"><%#= post.created_at.strftime("%b %y") %></p>
+                          <pre class="m-0" style="padding-top: 2px;"> • </pre>
+                          <p class="font-12"><%#= post.reading_time %> min read</p>
+                        </div>
+                    </div>
+                    <%#= cl_image_tag post.image %>
+                <%# end %>
+                <div class="d-flex">
+                  <%# if policy(Post).create? %>
+                    <%#= link_to "Edit", edit_admin_post_path(post), class: 'crud-links' %>
+                    <%#= link_to "Delete", admin_post_path(post), method: :delete, data: { confirm: "Are you sure you want to delete the post '#{ post.title }'" }, class: 'crud-links' %>
+                  <%# end %>
+                </div>
+            </div>
+        <%# end %>
+      </div> -->
+<!--       <div class="news-grid-button">
+        <span class="yellow-button">More News</span>
+      </div> -->
+    </div>
   </div>
 </div>
