--- a/app/assets/stylesheets/posts/_posts-index.scss
+++ b/app/assets/stylesheets/posts/_posts-index.scss
@@ -41,7 +41,7 @@
 }
 
 .featured-post {
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
 
   & a {
@@ -132,7 +132,7 @@
 }
 
 .featured-post-image {
-  width: 50%;
+  width: 45%;
   height: 100%;
   object-fit: cover;
 
@@ -142,10 +142,10 @@
 }
 
 .all-news {
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
   border-top: 1px solid #D2D2D2;
-  padding-top: 80px;
+  padding: 80px 0;
 
   & h1 {
     padding-bottom: 60px;
@@ -181,5 +181,29 @@
   display: flex;
   justify-content: center;
   padding: 80px 0;
+}
+
+.new-post-card {
+  display: flex;
+  margin: 10px 0;
+}
+
+.new-post-card-image {
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-left: 20px;
+}
+
+.trix-text-container {
+  color: red;
+}
+
+.new-post-card-text {
+  font-size: 14px;
+  font-weight: lighter;
+  // line-height: 25px;
+  color: #717B8D;
 }
 
