--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -184,7 +184,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="inks-section">
+        <div class="inks-section" style="padding-top: 80px;">
           <div class="about-fifth-section-left mobile-center">
             <h2 style="padding-left: 16px;"><%= t("software.fourth_section_title_five") %></h2>
             <p class="responsive-text-small about-fifth-section-text" style="padding-left: 16px;"><%= t("software.fourth_section_text_five") %></p>
@@ -213,9 +213,9 @@
       </div>
     </div>
   </div>
-  <div class="software-fifth-section-wrapper">
+  <div class="software-fifth-section-wrapper" >
     <div class="container">
-      <div class="software-fourth-section-text no-padding-mobile">
+      <div class="software-fourth-section-text no-padding-mobile" style="padding-top: 0px;">
         <%= image_tag 'software-icon-4.png', class: 'about-icon' %>
         <h2 class="text-center"><%= t("software.fifth_section_title_one") %></h2>
         <p class="responsive-text-small text-center"><%= t("software.fifth_section_sub_title") %></p>
