--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -13,9 +13,11 @@
       <%= cl_image_tag("Piggy_1_al3kec.png", :quality=>"auto", class: "first-section-image") %>
   </div>
   <div class="ownership-second-section-wrapper">
-    <%= image_tag 'ownership-icon-1.png', class: 'about-icon' %>
-    <h2 class="ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_title") %></h2>
-    <p class="responsive-text-small ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_text") %></p>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <%= image_tag 'ownership-icon-1.png', class: 'about-icon' %>
+    </div>
+    <h2 class="ownership-second-section-text text-center" data-aos="fade-up" data-aos-duration="2000"><%= t("cost_of_ownership.second_section_title") %></h2>
+    <p class="responsive-text-small ownership-second-section-text text-center" data-aos="fade-up" data-aos-duration="2000"><%= t("cost_of_ownership.second_section_text") %></p>
   </div>
   <div class="ownership-third-section-wrapper">
     <%= cl_image_tag("ownership-slider_vuhnwc.png", :quality=>"auto", id: "ownership-slider", class: "ownership-slider hide-mobile") %>
