--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -81,8 +81,8 @@
 
 .fxone-dots {
   position: absolute;
-  width: 160px;
-  top: 0;
+  width: 15vw;
+  top: -5vw;
   left: 20%;
   @include for-medium-devices-down {
     left: 10%;
