--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -46,6 +46,7 @@
 }
 
 .fxone-fourth-section-wrapper {
+  padding-top: 40px;
   background-color: #FFF;
 }
 
@@ -82,6 +83,7 @@
 .fxone-dots {
   position: absolute;
   width: 15vw;
+  max-width: 300px;
   top: -5vw;
   left: 20%;
   @include for-medium-devices-down {
