--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -327,7 +327,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 8px 30px rgba(149, 156, 169, 0.30), -1px -1px 30px rgba(156, 173, 198, 0.30);
+  transition: 0.3s;
+  &:hover {
+    box-shadow: 0px 8px 5px rgba(149, 156, 169, 0.25), -1px -1px 10px rgba(156, 173, 198, 0.30);
+  }
 }
 
 .about-form {
