--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -139,7 +139,11 @@
   z-index: 4;
   margin: 15px 0;
   height: 250px;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+  transition: 0.3s;
+  box-shadow: 0px 8px 30px rgba(149, 156, 169, 0.30), -1px -1px 30px rgba(156, 173, 198, 0.30);
+  &:hover {
+    box-shadow: 0px 8px 5px rgba(149, 156, 169, 0.25), -1px -1px 10px rgba(156, 173, 198, 0.30);
+  }
   padding-bottom: 16px;
   p {
     padding: 0 16px;
