--- a/app/assets/stylesheets/pages/_software.scss
+++ b/app/assets/stylesheets/pages/_software.scss
@@ -94,7 +94,11 @@
 .software-card {
   display: flex;
   border: 3px solid #fafafa;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+  transition: 0.3s;
+  box-shadow: 0px 8px 30px rgba(149, 156, 169, 0.30), -1px -1px 30px rgba(156, 173, 198, 0.30);
+  &:hover {
+    box-shadow: 0px 8px 5px rgba(149, 156, 169, 0.25), -1px -1px 10px rgba(156, 173, 198, 0.30);
+  }
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
