--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -265,7 +265,7 @@
     <%= image_tag 'square-dots.png', class: 'fxone-seventh-section-dots' %>
     <%= cl_image_tag("fourth-section-bottom-half_j9e2d7.png", :quality=>"auto", class: "fxone-fourth-section-background hide-mobile") %>
     <div class="container">
-      <div class="about-section">
+      <div class="about-section" style="padding-top: 100px;">
         <div class="about-fifth-section-left mobile-center fxone-no-padding" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'fxone-icon-4.png', class: 'about-icon' %>
           <h2 class="about-fifth-section-text"><%= t("fxone_remote.seventh_section_title") %></h2>
