--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -51,10 +51,7 @@
         </div>
       </div>
       <div class="faq-card-body" id="faqBody4">
-        <p class="light-gray-thin-text responsive-text-small"><%= t('faq.desc4_1') %>!</p>
-        <p class="light-gray-thin-text responsive-text-small"><%= t('faq.desc4_2') %></p>
-        <p class="light-gray-thin-text responsive-text-small"><%= t('faq.desc4_3') %></p>
-        <p class="light-gray-thin-text responsive-text-small"><%= t('faq.desc4_4') %>:</p>
+        <p class="light-gray-thin-text responsive-text-small"><%= t('faq.desc4_1') %>! <br><%= t('faq.desc4_2') %> <br><%= t('faq.desc4_3') %><br><%= t('faq.desc4_4') %>:</p>
         <ul>
           <li><p class="light-gray-thin-text responsive-text-small"><%= t('faq.desc4_5') %></p></li>
           <li><p class="light-gray-thin-text responsive-text-small"><%= t('faq.desc4_6') %></p></li>
