--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -7,6 +7,7 @@
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "inks-big-pill") %>
     <div class="first-section-text">
       <h1 class="w-100"><%= t("inks_and_consumables.first_section_text") %></h1>
+      <h3 class="w-100" style="color: #0D1B26"><%= t("inks_and_consumables.first_section_text_two") %></h3>
     </div>
     <%= cl_image_tag("inks-and-cons_wzglxn.png", class: "first-section-image", style: "max-width: 700px;") %>
   </div>
@@ -36,12 +37,15 @@
   <div class="inks-third-section-wrapper">
     <%= cl_image_tag("slant-background_xuvpqk.png", :quality=>"auto", class: "inks-slant hide-mobile") %>
     <%= cl_image_tag("mobile-slant_kd8uj1.png", :quality=>"auto", class: "inks-slant show-mobile") %>
-    <div class="inks-section mobile-reverse">
-      <%= cl_image_tag("inks-pipes_nfyp2g.png", class: "fxone-first-section-image position-relative inks-third-section-image") %>
+    <div class="inks-section">
+      <%= cl_image_tag("gif_r2eybt.gif", class: "inks-gif") %>
       <div class="inks-third-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'inks-icon-1.png', class: 'about-icon' %>
         <h3 class="inks-fifth-section-text mobile-margin-bottom"><%= t("inks_and_consumables.third_section_text") %></h3>
       </div>
+    </div>
+    <div class="jc">
+      <%= cl_image_tag("inks-pipes_nfyp2g.png", :quality=>"auto", class: "inks-btm") %>
     </div>
   </div>
 </div>
