--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -16,14 +16,14 @@
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "inks-little-pill") %>
     <div class="container">
       <div class="inks-section">
-        <div class="inks-first-section-left">
+        <div class="inks-first-section-left" data-aos="fade-right" data-aos-duration="2000">
           <div class="inks-card pb-3" style="margin: 0 0 0 auto">
             <%= image_tag 'inks-card-icon-1.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header px-3"><%= t("inks_and_consumables.first_card_title") %></p>
             <p class="paragraph-text inks-card-text px-3"><%= t("inks_and_consumables.first_card_text") %></p>
           </div>
         </div>
-        <div class="inks-first-section-right">
+        <div class="inks-first-section-right" data-aos="fade-left" data-aos-duration="2000">
           <%= image_tag 'square-dots.png', class: 'inks-dots hide-small' %>
           <div class="inks-card pb-3" style="margin: 0 auto 0 0">
             <%= image_tag 'inks-card-icon-2.png', class: 'about-icon square-card-icon' %>
