added landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,23 +28,29 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
+    <% unless params[:action] == 'landing' %>
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flashes' %>
+    <% end %>
     <div class="min-height">
       <%= yield %>
     </div>
-    <% if @not_seen_cookie %>
-      <div class="cookie-bar">
-        <div class="cookie-bar-content d-flex justify-content-center align-items-center">
-          <div class="corner"></div>
-          <p class="m-0 text-center"><%= t("cookie_bar.content") %> <span style="color: #FFB03A;"><%= t("cookie_bar.cookie_policy") %></span></p>
-          <%= link_to seen_cookie_path, remote: true, class: 'cookie-close close-cookie-bar' do %>
-            <%= image_tag "cookie-close.png" %>
-          <% end %>
+    <% unless params[:action] == 'landing' %>
+      <% if @not_seen_cookie %>
+        <div class="cookie-bar">
+          <div class="cookie-bar-content d-flex justify-content-center align-items-center">
+            <div class="corner"></div>
+            <p class="m-0 text-center"><%= t("cookie_bar.content") %> <span style="color: #FFB03A;"><%= t("cookie_bar.cookie_policy") %></span></p>
+            <%= link_to seen_cookie_path, remote: true, class: 'cookie-close close-cookie-bar' do %>
+              <%= image_tag "cookie-close.png" %>
+            <% end %>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
-    <%= render 'shared/footer' %>
+    <% unless params[:action] == 'landing' %>
+      <%= render 'shared/footer' %>
+    <% end %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
