--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -1,1 +1,117 @@
 <!-- <h1>here lies the privacy policy once we have it</h1> -->
+<div class="privacy-policy-wrapper">
+  <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "news-pill") %>
+  <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "news-pill-bottom") %>
+  <div class="container" style="position: relative; z-index: 2">
+    <h1 class="responsive-header text-center">Privacy Policy</h1>
+    <p class="responsive-text-small text-center">Last updated: January 14th, 2020</p>
+    <!--  -->
+    <p class="responsive-text">Thank you for choosing to be part of our community at Foenix Coding Ltd (“<span class="bold">Company</span>”, “<span class="bold">we</span>”, “<span class="bold">us</span>”, or “<span class="bold">our</span>”). We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy , or our practices with regards to your personal information, please contact us at sales@foenixcoding.com.
+    <br><br>
+    When you visit our website www.foenixcoding.com, and use our services, you trust us with your personal information. We take your privacy very seriously. In this privacy policy, we seek to explain to you in the clearest way possible what information we collect, how we use it and what rights you have in relation to it. We hope you take some time to read through it carefully, as it is important. If there are any terms in this privacy policy that you do not agree with, please discontinue use of our Sites and our services.
+    <br><br>
+    This privacy policy applies to all information collected through our website (such as www.foenixcoding.com), and/or any related services, sales, marketing or events (we refer to them collectively in this privacy policy as the "<span class="bold">Services</span>").  
+    <span class="bold">Please read this privacy policy carefully as it will help you make informed decisions about sharing your personal information with us.</span></p>
+    <!--  -->
+    <h4 class="bold">Table of Contents</h4>
+    <p class="responsive-text-small mb-0 underline">1. WHAT INFORMATION DO WE COLLECT?</p>
+    <p class="responsive-text-small mb-0 underline">2. HOW DO WE USE YOUR INFORMATION?</p>
+    <p class="responsive-text-small mb-0 underline">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</p>
+    <p class="responsive-text-small mb-0 underline">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</p>
+    <p class="responsive-text-small mb-0 underline">5. HOW LONG DO WE KEEP YOUR INFORMATION?</p>
+    <p class="responsive-text-small mb-0 underline">6. DO WE COLLECT INFORMATION FROM MINORS?</p>
+    <p class="responsive-text-small mb-0 underline">7. WHAT ARE YOUR PRIVACY RIGHTS?</p>
+    <p class="responsive-text-small mb-0 underline">8. DATA BREACH</p>
+    <p class="responsive-text-small mb-0 underline">9. CONTROLS FOR DO-NOT-TRACK FEATURES</p>
+    <p class="responsive-text-small mb-0 underline">10. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</p>
+    <p class="responsive-text-small mb-0 underline">11. DO WE MAKE UPDATES TO THIS POLICY?</p>
+    <p class="responsive-text-small underline">12. HOW CAN YOU CONTACT US ABOUT THIS POLICY?</p>
+    <!-- 1 -->
+    <h4 class="bold">1. WHAT INFORMATION DO WE COLLECT?</h4>
+    <p class="responsive-text black">Personal information you disclose to us</p>
+    <p class="responsive-text"><span class="bold">In Short:</span> We collect personal information that you provide to us such as name, address, contact information, passwords and security data, and payment information.
+    <br><br>
+    We collect personal information that you voluntarily provide to us when registering at the Services expressing an interest in obtaining information about us or our products and services, when participating in activities on the Services or otherwise contacting us.
+    <br><br>
+    The personal information that we collect depends on the context of your interactions with us and the Services, the choices you make and the products and features you use. The personal information we collect can include the following:
+    <br><br>
+    <span class="bold">Publicly Available Personal Information.</span> We collect first name, maiden name, last name, and nickname; business email; business phone number; and other similar data.
+    <br>
+    <span class="bold">Credentials.</span> We collect passwords, password hints, and similar security information used for authentication and account access.
+    <br>
+    All personal information that you provide to us must be true, complete and accurate, and you must notify us of any changes to such personal information.</p>
+    <p class="responsive-text black">Information automatically collected</p>
+    <p class="responsive-text"><span class="bold">In Short:</span> Some information – such as IP address and/or browser and device characteristics – is collected automatically when you visit our Services.
+      <br><br>
+      We automatically collect certain information when you visit, use or navigate the Services. This information does not reveal your specific identity (like your name or contact information) but may include device and usage information, such as your IP address, browser and device characteristics, operating system, language preferences, referring URLs, device name, country, location, information about how and when you use our Services and other technical information. This information is primarily needed to maintain the security and operation of our Services, and for our internal analytics and reporting purposes.
+      <br><br>
+      Like many businesses, we also collect information through cookies and similar technologies.
+      <br><br>
+      <span class="bold">Online Identifiers.</span> We collect cookie identifiers, or others such as the ones used for analytics and marketing; devices; device's geolocation; and other similar data.</p>
+      <!-- 2 -->
+      <h4 class="bold">2. HOW DO WE USE YOUR INFORMATION?</h4>
+      <p class="responsive-text"><span class="bold">In Short:</span><span class="italic">We process your information for purposes based on legitimate business interests, the fulfillment of our contract with you, compliance with our legal obligations, and/or your consent.</span>
+      <br><br>
+      We use personal information collected via our Services for a variety of business purposes described below. We process your personal information for these purposes in reliance on our legitimate business interests, in order to enter into or perform a contract with you, with your consent, and/or for compliance with our legal obligations. We indicate the specific processing grounds we rely on next to each purpose listed below.
+      <br><br>
+      We use the information we collect or receive:
+      <ul>
+        <li class="responsive-text"><span class="bold">To facilitate account creation and logon process.</span> If you choose to link your account with us to a third party account (such as your Google or Facebook account), we use the information you allowed us to collect from those third parties to facilitate account creation and logon process for the performance of the contract.</li>
+        <li class="responsive-text"><span class="bold">To send you marketing and promotional communications.</span> We and/or our third party marketing partners may use the personal information you send to us for our marketing purposes, if this is in accordance with your marketing preferences. You can opt-out of our marketing emails at any time (see the "<span class="underline">WHAT ARE YOUR PRIVACY RIGHTS</span>" below).</li>
+        <li class="responsive-text"><span class="bold">To send administrative information to you.</span> We may use your
+        personal information to send you product, service and new feature information and/or information about changes to our terms, conditions, and policies.</li>
+        <li class="responsive-text"><span class="bold">Fulfill and manage your orders.</span> We may use your information to fulfill and manage your orders, payments, returns, and exchanges made through the Services.</li>
+      </ul>
+    </p>
+    <!-- 3 -->
+    <h4 class="bold">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</h4>
+    <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">We only share information with your consent, to comply with laws, to provide you with services, to protect your rights, or to fulfill business obligations.</span>
+    <br><br>
+    We may process or share data based on the following legal basis:
+    <ul>
+      <li class="responsive-text"><span class="bold">Consent:</span> We may process your data if you have given us specific consent to use your personal information in a specific purpose.</li>
+      <li class="responsive-text"><span class="bold">Legitimate Interests:</span> We may process your data when it is reasonably necessary to achieve our legitimate business interests. </li>
+      <li class="responsive-text"><span class="bold">Performance of a Contract:</span> Where we have entered into a contract with you, we may process your personal information to fulfill the terms of our contract.</li>
+      <li class="responsive-text"><span class="bold">Legal Obligations:</span> We may disclose your information where we are legally required to do so in order to comply with applicable law, governmental requests, a judicial proceeding, court order, or legal process, such as in response to a court order or a subpoena (including in response to public authorities to meet national security or law enforcement requirements).</li>
+      <li class="responsive-text"><span class="bold">Vital Interests:</span> We may disclose your information where we believe it is necessary to investigate, prevent, or take action regarding potential violations of our policies, suspected fraud, situations involving potential threats to the safety of any person and illegal activities, or as evidence in litigation in which we are involved.</li>
+    </ul>
+    <p class="responsive-text">More specifically, we may need to process your data or share your personal information in the following situations:</p>
+    <ul>
+      <li class="responsive-text"><span class="bold">Business Transfers.</span> We may share or transfer your information in connection with, or during negotiations of, any merger, sale of company assets, financing, or acquisition of all or a portion of our business to another company.</li>
+      <li class="responsive-text"><span class="bold">Third-Party Advertisers.</span> We may use third-party advertising companies to serve ads when you visit the Services. These companies may use information about your visits to our Website(s) and other websites that are contained in web cookies and other tracking technologies in order to provide advertisements about goods and services of interest to you.</li>
+    </ul>
+    </p>
+    <!-- 4 -->
+    <h4 class="bold">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</h4>
+    <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">We may use cookies and other tracking technologies to collect and store your information.</span>
+    <br><br>
+    We may use cookies and similar tracking technologies (like web beacons and pixels) to access or store information. Specific information about how we use such technologies and how you can refuse certain cookies is set out in our Cookie Policy.</p>
+    <!-- 5 -->
+    <h4 class="bold">5. HOW LONG DO WE KEEP YOUR INFORMATION?</h4>
+    <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">We keep your information for as long as necessary to fulfill the purposes outlined in this privacy policy unless otherwise required by law.</span>
+    <br><br>
+    We will only keep your personal information for as long as it is necessary for the purposes set out in this privacy policy, unless a longer retention period is required or permitted by law (such as tax, accounting or other legal requirements). No purpose in this policy will require us keeping your personal information for longer than the period of time in which users have an account with us.
+    <br><br>
+    When we have no ongoing legitimate business need to process your personal information, we will either delete or anonymize it, or, if this is not possible (for example, because your personal information has been stored in backup archives), then we will securely store your personal information and isolate it from any further processing until deletion is possible.
+    </p>
+    <!-- 6 -->
+    <h4 class="bold">DO WE COLLECT INFORMATION FROM MINORS?</h4>
+    <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">We do not knowingly collect data from or market to children under 18 years of age.</span>
+    <br><br>
+    We do not knowingly solicit data from or market to children under 18 years of age. By using the Services, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependent’s use of the Services. If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we have collected from children under age 18, please contact us at sales@foenixcoding.com.</p>
+    <!-- 7 -->
+    <h4 class="bold">7. WHAT ARE YOUR PRIVACY RIGHTS?</h4>
+    <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">In some regions, such as the European Economic Area, you have rights that allow you greater access to and control over your personal information. You may review, change, or terminate your account at any time.</span>
+    <br><br>
+    In some regions (like the European Economic Area), you have certain rights under applicable data protection laws. These may include the right (i) to request access and obtain a copy of your personal information, (ii) to request rectification or erasure; (iii) to restrict the processing of your personal information; and (iv) if applicable, to data portability. In certain circumstances, you may also have the right to object to the processing of your personal information. To make such a request, please use the <%= link_to 'contact details', 'http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm', target: '_blank' %> contact details provided below. We will consider and act upon any request in accordance with applicable data protection laws.
+    <br><br>
+    If we are relying on your consent to process your personal information, you have the right to withdraw your consent at any time. Please note however that this will not affect the lawfulness of the processing before its withdrawal.
+    <br><br>
+    If you are resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. You can find their contact details here: <%= link_to 'http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm.', 'http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm.', target: '_blank' %>
+    <br><br>
+    If you have questions or comments about your privacy rights, you may email us at sales@foenixcoding.com.
+    </p>
+    <!-- 8 -->
+
+  </div>
+</div>
