--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -1,7 +1,8 @@
 .maintenance-wrapper {
   display: flex;
-  align-items: center;
   justify-content: center;
+  min-height: 100vh;
+  background: #EEF2F8;
 }
 
 .maintenance-container {
@@ -22,6 +23,8 @@
     flex-direction: column-reverse;
     padding-top: 50px;
     align-items: center;
+    justify-content: flex-end;
+
   }
 }
 
@@ -30,14 +33,17 @@
   height: 100%;
   @include for-small-devices-down {
     width: 60%;
+    height: auto;
   }
 }
 
 .maintenance-text {
   width: 60%;
+  @include for-small-devices-down {
+    text-align: center;
+  }
   @include for-phone-only {
     width: 90%;
-    text-align: center;
   }
 }
 
