--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -2,14 +2,14 @@
   <div class="maintenance-container">
     <div class="maintenance-text">
       <h3 class="mb-4 grey-text landing-header">MAINTENANCE</h3>
-      <h4 class="mb-4">We're undergoing a major update.</h4>
-      <h4 class="mb-4">Exciting news coming soon ;)</h4>
+      <h4 class="landing-big-text mb-4">We're undergoing a major update.</h4>
+      <h4 class="landing-big-text mb-4">Exciting news coming soon ;)</h4>
       <div class="main-break"></div>
-      <p class="mb-0">It's business as usual. Sorry for the inconvenience.</p>
-      <p class="">We'll be back up and running as fast as possible</p>
-      <p class="mb-0">You can contact us here:</p>
-      <p class="mb-0"><span class="bold">Tel:</span> 0044 1932 701 449</p>
-      <p class=""><span class="bold">Email:</span> sales@foenixcoding.com</p>
+      <p class="landing-text mb-0">It's business as usual. Sorry for the inconvenience.</p>
+      <p class="landing-text">We'll be back up and running as fast as possible</p>
+      <p class="landing-text mb-0">You can contact us here:</p>
+      <p class="landing-text mb-0"><span class="bold">Tel:</span> 0044 1932 701 449</p>
+      <p class="landing-text"><span class="bold">Email:</span> sales@foenixcoding.com</p>
     </div>
     <div class="maintenance-image">
       <%= image_tag 'foenix-logo.png', class: 'foenix-logo' %>
